--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
         "@ledgerhq/errors": "6.16.3",
         "@ledgerhq/hw-transport": "6.27.1",
         "@ledgerhq/hw-transport-webhid": "6.27.1",
-        "@solana/wallet-adapter-base": "workspace:^",
+        "@solana/wallet-adapter-base": "0.9.23",
+        "@solana/wallet-adapter-react": "0.15.35",
         "@types/web": "npm:typescript@~4.7.4",
         "eslint": "8.22.0",
         "@ngraveio/bc-ur": "1.1.12"
@@ -62,7 +63,8 @@
         "@ledgerhq/errors": "6.16.3",
         "@ledgerhq/hw-transport": "6.27.1",
         "@ledgerhq/hw-transport-webhid": "6.27.1",
-        "@solana/wallet-adapter-base": "workspace:^",
+        "@solana/wallet-adapter-base": "0.9.23",
+        "@solana/wallet-adapter-react": "0.15.35",
         "@types/web": "npm:typescript@~4.7.4",
         "eslint": "8.22.0",
         "@ngraveio/bc-ur": "1.1.12"
