--- a/packages/core/react/package.json
+++ b/packages/core/react/package.json
@@ -29,8 +29,7 @@
         "build": "tsc --build --verbose && pnpm run package",
         "clean": "shx mkdir -p lib && shx rm -rf lib",
         "lint": "prettier --check 'src/{*,**/*}.{ts,tsx,js,jsx,json}' && eslint",
-        "package": "shx mkdir -p lib/cjs && shx echo '{ \"type\": \"commonjs\" }' > lib/cjs/package.json",
-        "test": "jest"
+        "package": "shx mkdir -p lib/cjs && shx echo '{ \"type\": \"commonjs\" }' > lib/cjs/package.json"
     },
     "peerDependencies": {
         "@bbachain/web3.js": "^1.1.3",
