--- a/packages/core/react/package.json
+++ b/packages/core/react/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@solana/wallet-adapter-react",
-    "version": "0.15.35",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/anza-xyz/wallet-adapter",
+    "name": "@bbachain/wallet-adapter-react",
+    "version": "0.1.3",
+    "author": "BBAChain Labs <developers@bbachain.com>",
+    "repository": "https://github.com/bbachain/wallet-adapter",
     "license": "Apache-2.0",
     "publishConfig": {
         "access": "public"
@@ -29,20 +29,18 @@
         "build": "tsc --build --verbose && pnpm run package",
         "clean": "shx mkdir -p lib && shx rm -rf lib",
         "lint": "prettier --check 'src/{*,**/*}.{ts,tsx,js,jsx,json}' && eslint",
-        "package": "shx mkdir -p lib/cjs && shx echo '{ \"type\": \"commonjs\" }' > lib/cjs/package.json",
-        "test": "jest"
+        "package": "shx mkdir -p lib/cjs && shx echo '{ \"type\": \"commonjs\" }' > lib/cjs/package.json"
     },
     "peerDependencies": {
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/web3.js": "^1.1.3",
         "react": "*"
     },
     "dependencies": {
-        "@solana-mobile/wallet-adapter-mobile": "^2.0.0",
-        "@solana/wallet-adapter-base": "workspace:^",
-        "@solana/wallet-standard-wallet-adapter-react": "^1.1.0"
+        "@bbachain/wallet-adapter-base": "workspace:^",
+        "@bbachain/wallet-standard-wallet-adapter-react": "^0.1.2"
     },
     "devDependencies": {
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/web3.js": "^1.1.3",
         "@types/jest": "^28.1.8",
         "@types/react": "^18.2.13",
         "@types/react-dom": "^18.2.6",
