--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
         "@ledgerhq/errors": "6.16.3",
         "@ledgerhq/hw-transport": "6.27.1",
         "@ledgerhq/hw-transport-webhid": "6.27.1",
+        "@solana/wallet-adapter-ant-design": "0.11.32",
         "@solana/wallet-adapter-base": "0.9.23",
+        "@solana/wallet-adapter-base-ui": "0.1.2",
         "@solana/wallet-adapter-react": "0.15.35",
         "@types/web": "npm:typescript@~4.7.4",
         "eslint": "8.22.0",
@@ -63,7 +65,9 @@
         "@ledgerhq/errors": "6.16.3",
         "@ledgerhq/hw-transport": "6.27.1",
         "@ledgerhq/hw-transport-webhid": "6.27.1",
+        "@solana/wallet-adapter-ant-design": "0.11.32",
         "@solana/wallet-adapter-base": "0.9.23",
+        "@solana/wallet-adapter-base-ui": "0.1.2",
         "@solana/wallet-adapter-react": "0.15.35",
         "@types/web": "npm:typescript@~4.7.4",
         "eslint": "8.22.0",
