--- a/packages/ui/ant-design/package.json
+++ b/packages/ui/ant-design/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@solana/wallet-adapter-ant-design",
-    "version": "0.11.32",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/anza-xyz/wallet-adapter",
+    "name": "@bbachain/wallet-adapter-ant-design",
+    "version": "0.1.3",
+    "author": "BBAChain Labs <developers@bbachain.com>",
+    "repository": "https://github.com/bbachain/wallet-adapter",
     "license": "Apache-2.0",
     "publishConfig": {
         "access": "public"
@@ -37,19 +37,19 @@
     },
     "peerDependencies": {
         "@ant-design/icons": "*",
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/web3.js": "^1.1.3",
         "antd": "*",
         "react": "*",
         "react-dom": "*"
     },
     "dependencies": {
-        "@solana/wallet-adapter-base": "workspace:^",
-        "@solana/wallet-adapter-base-ui": "workspace:^",
-        "@solana/wallet-adapter-react": "workspace:^"
+        "@bbachain/wallet-adapter-base": "workspace:^",
+        "@bbachain/wallet-adapter-base-ui": "workspace:^",
+        "@bbachain/wallet-adapter-react": "workspace:^"
     },
     "devDependencies": {
         "@ant-design/icons": "^4.8.0",
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/web3.js": "^1.1.3",
         "@types/react": "^18.2.13",
         "@types/react-dom": "^18.2.6",
         "antd": "^4.24.10",
