--- a/packages/ui/base-ui/package.json
+++ b/packages/ui/base-ui/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@solana/wallet-adapter-base-ui",
-    "version": "0.1.2",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/anza-xyz/wallet-adapter",
+    "name": "@bbachain/wallet-adapter-base-ui",
+    "version": "0.1.3",
+    "author": "BBAChain Labs <developers@bbachain.com>",
+    "repository": "https://github.com/bbachain/wallet-adapter",
     "license": "Apache-2.0",
     "publishConfig": {
         "access": "public"
@@ -32,14 +32,14 @@
         "package": "shx mkdir -p lib/cjs && shx echo '{ \"type\": \"commonjs\" }' > lib/cjs/package.json"
     },
     "peerDependencies": {
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/web3.js": "^1.1.3",
         "react": "*"
     },
     "dependencies": {
-        "@solana/wallet-adapter-react": "workspace:^"
+        "@bbachain/wallet-adapter-react": "workspace:^"
     },
     "devDependencies": {
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/web3.js": "^1.1.3",
         "@types/react": "^18.2.13",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
