--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
         "@solana/wallet-adapter-ant-design": "0.11.32",
         "@solana/wallet-adapter-base": "0.9.23",
         "@solana/wallet-adapter-base-ui": "0.1.2",
+        "@solana/wallet-adapter-material-ui": "0.16.34",
         "@solana/wallet-adapter-react": "0.15.35",
+        "@solana/wallet-adapter-react-ui": "0.9.35",
         "@types/web": "npm:typescript@~4.7.4",
         "eslint": "8.22.0",
         "@ngraveio/bc-ur": "1.1.12"
@@ -68,7 +70,9 @@
         "@solana/wallet-adapter-ant-design": "0.11.32",
         "@solana/wallet-adapter-base": "0.9.23",
         "@solana/wallet-adapter-base-ui": "0.1.2",
+        "@solana/wallet-adapter-material-ui": "0.16.34",
         "@solana/wallet-adapter-react": "0.15.35",
+        "@solana/wallet-adapter-react-ui": "0.9.35",
         "@types/web": "npm:typescript@~4.7.4",
         "eslint": "8.22.0",
         "@ngraveio/bc-ur": "1.1.12"
