--- a/packages/ui/material-ui/package.json
+++ b/packages/ui/material-ui/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@solana/wallet-adapter-material-ui",
-    "version": "0.16.34",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/anza-xyz/wallet-adapter",
+    "name": "@bbachain/wallet-adapter-material-ui",
+    "version": "0.1.3",
+    "author": "BBAChain Labs <developers@bbachain.com>",
+    "repository": "https://github.com/bbachain/wallet-adapter",
     "license": "Apache-2.0",
     "publishConfig": {
         "access": "public"
@@ -34,21 +34,21 @@
     "peerDependencies": {
         "@mui/icons-material": "*",
         "@mui/material": "*",
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/web3.js": "^1.1.3",
         "react": "*",
         "react-dom": "*"
     },
     "dependencies": {
-        "@solana/wallet-adapter-base": "workspace:^",
-        "@solana/wallet-adapter-base-ui": "workspace:^",
-        "@solana/wallet-adapter-react": "workspace:^"
+        "@bbachain/wallet-adapter-base": "workspace:^",
+        "@bbachain/wallet-adapter-base-ui": "workspace:^",
+        "@bbachain/wallet-adapter-react": "workspace:^"
     },
     "devDependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.13.5",
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/web3.js": "^1.1.3",
         "@types/react": "^18.2.13",
         "@types/react-dom": "^18.2.6",
         "react": "^18.2.0",
