--- a/.github/label-actions.yml
+++ b/.github/label-actions.yml
@@ -13,17 +13,17 @@ question:
 
 
       Questions like yours deserve a purpose-built Q & A forum. Unless there exists evidence that this is a bug with
-      Wallet Adapter itself, please post your question to the Solana Stack Exchange using this link:
+      Wallet Adapter itself, please post your question to the BBAChain Stack Exchange using this link:
 
 
-      https://solana.stackexchange.com/questions/ask
+      https://bbachain.stackexchange.com/questions/ask
 
 
       ---
 
 
       _This
-      [automated message](https://github.com/solana-labs/solana/blob/master/.github/label-actions.yml)
+      [automated message](https://github.com/bbachain/bbachain/blob/master/.github/label-actions.yml)
       is a result of having added the &lsquo;question&rsquo; tag_.
 
     # Close the issue
@@ -44,7 +44,7 @@ use-wallet-standard:
 
 
       However, most of what you've written for this adapter is portable to the Wallet Standard interface, and
-      implementing this interface will grant your wallet distribution on dapps across Solana. After reading the guide
+      implementing this interface will grant your wallet distribution on dapps across BBAChain. After reading the guide
       and looking at the reference implementations, if you have questions on how to do this, please open an issue here:
 
 
