--- a/packages/starter/material-ui-starter/package.json
+++ b/packages/starter/material-ui-starter/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@solana/wallet-adapter-material-ui-starter",
-    "version": "0.13.32",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/anza-xyz/wallet-adapter",
+    "name": "@bbachain/wallet-adapter-material-ui-starter",
+    "version": "0.1.4",
+    "author": "BBAChain Labs <developers@bbachain.com>",
+    "repository": "https://github.com/bbachain/wallet-adapter",
     "license": "Apache-2.0",
     "publishConfig": {
         "access": "public"
@@ -29,11 +29,11 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.13.5",
-        "@solana/wallet-adapter-base": "workspace:^",
-        "@solana/wallet-adapter-material-ui": "workspace:^",
-        "@solana/wallet-adapter-react": "workspace:^",
-        "@solana/wallet-adapter-wallets": "workspace:^",
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/wallet-adapter-base": "workspace:^",
+        "@bbachain/wallet-adapter-material-ui": "workspace:^",
+        "@bbachain/wallet-adapter-react": "workspace:^",
+        "@bbachain/wallet-adapter-wallets": "workspace:^",
+        "@bbachain/web3.js": "^1.1.3",
         "notistack": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
