--- a/packages/starter/nextjs-starter/package.json
+++ b/packages/starter/nextjs-starter/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@solana/wallet-adapter-nextjs-starter",
-    "version": "0.8.32",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/anza-xyz/wallet-adapter",
+    "name": "@bbachain/wallet-adapter-nextjs-starter",
+    "version": "0.1.4",
+    "author": "BBAChain Labs <developers@bbachain.com>",
+    "repository": "https://github.com/bbachain/wallet-adapter",
     "license": "Apache-2.0",
     "publishConfig": {
         "access": "public"
@@ -33,10 +33,10 @@
         "lint": "prettier --check 'src/{*,**/*}.{ts,tsx,js,jsx,json}' && eslint && next lint"
     },
     "dependencies": {
-        "@solana/wallet-adapter-base": "workspace:^",
-        "@solana/wallet-adapter-react": "workspace:^",
-        "@solana/wallet-adapter-react-ui": "workspace:^",
-        "@solana/wallet-adapter-wallets": "workspace:^",
+        "@bbachain/wallet-adapter-base": "workspace:^",
+        "@bbachain/wallet-adapter-react": "workspace:^",
+        "@bbachain/wallet-adapter-react-ui": "workspace:^",
+        "@bbachain/wallet-adapter-wallets": "workspace:^",
         "next": "^12.3.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
