--- a/packages/starter/react-ui-starter/package.json
+++ b/packages/starter/react-ui-starter/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@solana/wallet-adapter-react-ui-starter",
-    "version": "0.9.33",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/anza-xyz/wallet-adapter",
+    "name": "@bbachain/wallet-adapter-react-ui-starter",
+    "version": "0.1.4",
+    "author": "BBAChain Labs <developers@bbachain.com>",
+    "repository": "https://github.com/bbachain/wallet-adapter",
     "license": "Apache-2.0",
     "publishConfig": {
         "access": "public"
@@ -25,11 +25,11 @@
         "start": "parcel src/index.html"
     },
     "dependencies": {
-        "@solana/wallet-adapter-base": "workspace:^",
-        "@solana/wallet-adapter-react": "workspace:^",
-        "@solana/wallet-adapter-react-ui": "workspace:^",
-        "@solana/wallet-adapter-wallets": "workspace:^",
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/wallet-adapter-base": "workspace:^",
+        "@bbachain/wallet-adapter-react": "workspace:^",
+        "@bbachain/wallet-adapter-react-ui": "workspace:^",
+        "@bbachain/wallet-adapter-wallets": "workspace:^",
+        "@bbachain/web3.js": "^1.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
