--- a/packages/starter/example/package.json
+++ b/packages/starter/example/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@solana/wallet-adapter-example",
-    "version": "0.18.36",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/anza-xyz/wallet-adapter",
+    "name": "@bbachain/wallet-adapter-example",
+    "version": "0.1.4",
+    "author": "BBAChain Labs <developers@bbachain.com>",
+    "repository": "https://github.com/bbachain/wallet-adapter",
     "license": "Apache-2.0",
     "publishConfig": {
         "access": "public"
@@ -40,15 +40,15 @@
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.13.5",
         "@noble/curves": "^1.1.0",
-        "@solana/wallet-adapter-ant-design": "workspace:^",
-        "@solana/wallet-adapter-base": "workspace:^",
-        "@solana/wallet-adapter-material-ui": "workspace:^",
-        "@solana/wallet-adapter-react": "workspace:^",
-        "@solana/wallet-adapter-react-ui": "workspace:^",
-        "@solana/wallet-adapter-wallets": "workspace:^",
-        "@solana/wallet-standard-features": "^1.1.0",
-        "@solana/wallet-standard-util": "^1.1.0",
-        "@solana/web3.js": "^1.77.3",
+        "@bbachain/wallet-adapter-ant-design": "workspace:^",
+        "@bbachain/wallet-adapter-base": "workspace:^",
+        "@bbachain/wallet-adapter-material-ui": "workspace:^",
+        "@bbachain/wallet-adapter-react": "workspace:^",
+        "@bbachain/wallet-adapter-react-ui": "workspace:^",
+        "@bbachain/wallet-adapter-wallets": "workspace:^",
+        "@bbachain/wallet-standard-features": "^0.1.2",
+        "@bbachain/wallet-standard-util": "^0.1.2",
+        "@bbachain/web3.js": "^1.1.3",
         "antd": "^4.24.10",
         "bs58": "^4.0.1",
         "next": "^12.3.4",
